--- a/components/services/services.html
+++ b/components/services/services.html
@@ -1,4 +1,29 @@
 <!DOCTYPE html>
 
 <!--! Services (Rajvir) -->
-<h1>Services</h1>
+<div class="wrapper">
+    <h1>Why choose Easybank?</h1>
+    <h4>We leverage Open Banking to turn your bank account into your financial hub. <br> Control your finances like never before.</h4>
+    <div class="grid">
+        <div class="service">
+            <img src="img/icon-online.svg" alt="">
+            <h3>Online Banking</h3>
+            <p>Our modern web and mobile applications allow you to keep tract of your finances wherever you are in the world.</p>    
+        </div>
+        <div class="service">
+            <img src="img/icon-budgeting.svg" alt="">
+            <h3>Simple Budgeting</h3>
+            <p>See exactly where your money goes each month. Receive notifications when you're close to hitting your limits.</p>    
+        </div>
+        <div class="service">
+            <img src="img/icon-onboarding.svg" alt="">
+            <h3>Fast Onboarding</h3>
+            <p>We don't do branches. Open your account in minutes online and start taking control of your finances right away.</p>    
+        </div>
+        <div class="service">
+            <img src="img/icon-api.svg" alt="">
+            <h3>Open API</h3>
+            <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>    
+        </div>
+    </div>
+</div>
