--- a/components/articles/articles.html
+++ b/components/articles/articles.html
@@ -1,4 +1,63 @@
-<!DOCTYPE html>
-
 <!--!  Articles (Touhid) -->
-<h1>Articles</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="articles.css">
+    <title>TEAMWORK ][ PROJECT</title>
+</head>
+<body>
+    <!-- ARTICLES SECTION -->
+    <div class="container">
+        <h2>Latest Articles</h2>  
+            <div class="cards">
+                <div class="card-1">
+                    <img src="../../img/image-currency.jpg" alt="">
+
+                    <p class="text-color"> By Claire Robinson </p>
+
+                    <p class="p-subhead"> Receive money in any <br> currency with no fees</p>
+
+                    <p class="text-color">The world is getting smaller and we’re becoming more mobile. So why should you be 
+                        forced to only receive money in a single … </p> 
+                </div>
+                <div class="card-2">
+                    <img src="../../img/image-restaurant.jpg" alt="">
+
+                    <p class="text-color">By Wilson Hutton </p>
+
+                    <p class="p-subhead">Treat yourself without <br> worrying about money </p>
+
+                    <p class="text-color">Our simple budgeting feature allows you to separate out your spending and set 
+                        realistic limits each month. That means you …  </p>  
+                </div>
+                <div class="card-3">
+                    <img src="../../img/image-plane.jpg" alt="">
+
+                    <p class="text-color"> By Wilson Hutton </p>
+
+                    <p class="p-subhead">Take your Easybank card wherever you go </p>
+
+                    <p class="text-color">We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
+                        while you’re abroad. We’ll even show you …</p>   
+                </div>
+                <div class="card-4">
+                    <img src="../../img/image-confetti.jpg " alt="">
+                    
+                    <p class="text-color">  By Claire Robinson </p>
+
+                    <p class="p-subhead">Our invite-only Beta <br> accounts are now live! </p>
+
+                    <p class="text-color">After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
+                        It’s easy to request an invite through the site ...</p>    
+                </div>
+            </div>
+    </div>
+
+</body>
+</html>
+
+
