Header and Footer added

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,4 +1,39 @@
 <!DOCTYPE html>
 
 <!--! Footer (Antareep) -->
-<h1>Footer</h1>
+<div id="leftest-div">
+    <div class="col1">
+        <a href="#">
+            <img id="footer-logo" src="img/logo-white.svg" alt="logo" />
+        </a>
+        <div id="social-medias">
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="#"><i class="fab fa-pinterest"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+
+        </div>
+        
+    </div>
+
+    <div class="col">
+        <a>About Us</a>
+        <a>Contact</a>
+        <a>Blog</a>
+    </div>
+
+    <div class="col">
+        <a>Careers</a>
+        <a>Support</a>
+        <a>Privacy Policy</a>
+    </div>
+</div>
+
+<div id="rightest-div">
+    <div class="col2">
+        <button class="gradient-btn">Request Invite</button>
+
+        <span id="copyright">&copy; Easybank. All Rights Reserved</span>
+    </div>
+</div>
