--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 
 <!--! Hero (Touhid)  -->
-<h1>Hero</h1>
+<h1 style="text-align: center; background-color: rgb(143, 140, 140); height: 500px;">Hero</h1>
