fixed articles section

--- a/components/articles/_articles.scss
+++ b/components/articles/_articles.scss
@@ -1,1 +1,101 @@
 //! Articles
+
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+body {
+    font-family: 'Public Sans';
+    font-size: 16px;
+    background-color: hsl(0, 0%, 98%);
+} 
+
+
+
+.container {
+    height: 100%;
+    margin: 0 100px;
+}
+
+
+.container h2 {
+    padding: 50px 50px 50px 17px;
+    font-size: 2.5em;
+    font-weight: 300;
+    color: rgb(58, 58, 58);
+}
+
+.card-1,
+.card-2,
+.card-3,
+.card-4 {
+    height: 520px;
+    width: 380px;
+    background-color: #fff;
+
+}
+
+
+.cards img {
+    height: 250px;
+    width: 380px;
+}
+
+
+
+.cards p {
+    margin: 18px 80px 0 30px;
+    line-height: 1.5rem;
+}
+
+.p-subhead {
+   font-size: 1.5em;
+   font-weight: 500;
+   color: rgb(58, 58, 58);
+}
+
+
+.text-color {
+    color: rgb(158, 154, 154);
+}
+
+
+.cards {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+}
+
+
+/* Mobile View */
+
+@media(max-width: 916px) {
+    .container h2 {
+        text-align: center;
+    }
+
+    .cards {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+    }
+}
+
+@media(max-width: 580px) {
+    .container h2 {
+        text-align: center;
+    }
+
+
+    .cards {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+}
