--- a/components/articles/articles.html
+++ b/components/articles/articles.html
@@ -9,9 +9,9 @@
 
                 <p class="text-color"> By Claire Robinson </p>
 
-                <p class="p-subhead"> Receive money in any <br> currency with no fees</p>
+                <p class="p-subhead"> Receive money in any currency with no fees</p>
 
-                <p class="text-color">The world is getting smaller and we’re becoming more mobile. So why should you be 
+                <p class="description">The world is getting smaller and we’re becoming more mobile. So why should you be 
                     forced to only receive money in a single … </p> 
             </div>
             <div class="card-2">
@@ -20,9 +20,9 @@
 
                 <p class="text-color">By Wilson Hutton </p>
 
-                <p class="p-subhead">Treat yourself without <br> worrying about money </p>
+                <p class="p-subhead">Treat yourself without worrying about money </p>
 
-                <p class="text-color">Our simple budgeting feature allows you to separate out your spending and set 
+                <p class="description">Our simple budgeting feature allows you to separate out your spending and set 
                     realistic limits each month. That means you …  </p>  
             </div>
             <div class="card-3">
@@ -32,7 +32,7 @@
 
                 <p class="p-subhead">Take your Easybank card wherever you go </p>
 
-                <p class="text-color">We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
+                <p class="description">We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
                     while you’re abroad. We’ll even show you …</p>   
             </div>
             <div class="card-4">
@@ -40,9 +40,9 @@
                 
                 <p class="text-color">  By Claire Robinson </p>
 
-                <p class="p-subhead">Our invite-only Beta <br> accounts are now live! </p>
+                <p class="p-subhead">Our invite-only Beta accounts are now live! </p>
 
-                <p class="text-color">After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
+                <p class="description">After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
                     It’s easy to request an invite through the site ...</p>    
             </div>
         </div>
